Further improved spacing and fixed button alignment

--- a/web/static/style.css
+++ b/web/static/style.css
@@ -64,15 +64,25 @@ div#bookmarks-elements > span.folder-actions {
     padding: 0.3em 0.3em 0 0;
 }
 
+span.folder-actions, span.bookmark-actions {
+    padding: 0.1em 0.3em;
+}
+
 ul.foldertree {
     padding-left: 0.3em;
     margin: 0.3em 0 0.3em 0;
 }
 
+ul.foldertree li {
+    list-style-type: none;
+}
+
 li.folder details {
     background-color: white;
     padding: 0;
-    border: 1px solid #E1AD01;
+    border-width: 1px 0 1px 1px;
+    border-style: solid;
+    border-color: #E1AD01;
     border-radius: 0.5em 0 0 0.5em;
 }
 
@@ -81,21 +91,13 @@ li.folder summary {
     cursor: pointer;
     background-color: #E1AD01;
     border-radius: 0.5em 0 0 .5em;
-    padding: 0 0.5em;
+    padding: 0;
 }
 
 span.folder-name {
     flex: 1;
-    margin-left: 1em;
     user-select: none;
-}
-
-li {
-    list-style-type: none;
-}
-
-div#bookmarks-elements li.bookmark {
-    padding-left: 1em;
+    padding: 0.1em 0.75em;
 }
 
 ul.bookmarks {
@@ -103,9 +105,9 @@ ul.bookmarks {
     padding-left: 0em;
 }
 
-li.bookmark {
+div#bookmarks-elements li.bookmark {
     display: flex;
-    padding: 0.1em 0;
+    padding: 0.1em 0 0.1em 1em;
 }
 
 li.bookmark:nth-child(odd) {
